--- a/src/main/resources/fr/chess/saechess/hello-view.fxml
+++ b/src/main/resources/fr/chess/saechess/hello-view.fxml
@@ -109,6 +109,23 @@
         <Rectangle fx:id="case57" fill="#EBECD0" height="60" width="60" GridPane.columnIndex="5" GridPane.rowIndex="7" />
         <Rectangle fx:id="case67" fill="#739552" height="60" width="60" GridPane.columnIndex="6" GridPane.rowIndex="7" />
         <Rectangle fx:id="case77" fill="#EBECD0" height="60" width="60" GridPane.columnIndex="7" GridPane.rowIndex="7" />
+          <Label text="8" GridPane.columnIndex="0" GridPane.rowIndex="0"></Label>
+          <Label text="7" GridPane.columnIndex="0" GridPane.rowIndex="1"></Label>
+          <Label text="6" GridPane.columnIndex="0" GridPane.rowIndex="2"></Label>
+          <Label text="5" GridPane.columnIndex="0" GridPane.rowIndex="3"></Label>
+          <Label text="4" GridPane.columnIndex="0" GridPane.rowIndex="4"></Label>
+          <Label text="3" GridPane.columnIndex="0" GridPane.rowIndex="5"></Label>
+          <Label text="2" GridPane.columnIndex="0" GridPane.rowIndex="6"></Label>
+          <Label text="1" GridPane.columnIndex="0" GridPane.rowIndex="7"></Label>
+
+          <Label text="8" GridPane.columnIndex="7" GridPane.rowIndex="7"></Label>
+          <Label text="7" GridPane.columnIndex="6" GridPane.rowIndex="7"></Label>
+          <Label text="6" GridPane.columnIndex="5" GridPane.rowIndex="7"></Label>
+          <Label text="5" GridPane.columnIndex="4" GridPane.rowIndex="7"></Label>
+          <Label text="4" GridPane.columnIndex="3" GridPane.rowIndex="7"></Label>
+          <Label text="3" GridPane.columnIndex="2" GridPane.rowIndex="7"></Label>
+          <Label text="2" GridPane.columnIndex="1" GridPane.rowIndex="7"></Label>
+
           <!-- placer pions noirs -->
           <ImageView fx:id="br1" GridPane.rowIndex="0" GridPane.columnIndex="0" fitWidth="60" fitHeight="60">
               <Image url="@/br.png"/>
@@ -171,7 +188,7 @@
           <ImageView fx:id="wq" GridPane.rowIndex="7" GridPane.columnIndex="3" fitWidth="60" fitHeight="60">
               <Image url="@/wq.png"/>
           </ImageView>
-          <ImageView fx:id="wk" GridPane.rowIndex="7" GridPane.columnIndex="4" fitWidth="60" fitHeight="60">
+          <ImageView fx:id="wk" GridPane.rowIndex="7" GridPane.columnIndex="4" fitWidth="60" fitHeight="60" onMousePressed="#opp1" onMouseReleased="#opp2" onMouseClicked="#wkMove">
               <Image url="@/wk.png"/>
           </ImageView>
           <ImageView fx:id="wb2" GridPane.rowIndex="7" GridPane.columnIndex="5" fitWidth="60" fitHeight="60">
@@ -293,6 +310,11 @@
           <VBox.margin>
               <Insets bottom="10.0" left="10.0" right="10.0" top="20.0" />
           </VBox.margin></Button>
+      <TextField fx:id="textA" promptText="z,q,s,d"></TextField>
+      <TextField fx:id="textF2" promptText="ligne"></TextField>
+      <TextField fx:id="textF1" promptText="colonne"></TextField>
+      <Button text="Valider" onAction="#btnDeplacer"></Button>
+
 
 
 
